      inheritance attributes which were based on 
      column_property() or similar would fail to evaluate.
      [ticket:1480]
    
    - Improved support for MapperProperty objects overriding
      that of an inherited mapper for non-concrete 
      inheritance setups - attribute extensions won't randomly
      collide with each other.  [ticket:1488]
    
    - Added AttributeExtension to sqlalchemy.orm.__all__
      
    - Improved error message when query() is called with
      a non-SQL /entity expression. [ticket:1476]
    
    - Using False or 0 as a polymorphic discriminator now
      works on the base class as well as a subclass.
      [ticket:1440]

    - Added enable_assertions(False) to Query which disables
      the usual assertions for expected state - used
      by Query subclasses to engineer custom state.
      [ticket:1424].  See
      http://www.sqlalchemy.org/trac/wiki/UsageRecipes/PreFilteredQuery
      for an example.

    - Fixed a somewhat hypothetical issue which would result
      in the wrong primary key being calculated for a mapper
      using the old polymorphic_union function - but this
      is old stuff.  [ticket:1486]
      
- sql
    - Fixed a bug in extract() introduced in 0.5.4 whereby
      the string "field" argument was getting treated as a 
      ClauseElement, causing various errors within more 
      complex SQL transformations.
      
    - Unary expressions such as DISTINCT propagate their 
      type handling to result sets, allowing conversions like
      unicode and such to take place.  [ticket:1420]
    
    - Fixed bug in Table and Column whereby passing empty
      dict for "info" argument would raise an exception.
      [ticket:1482]

- oracle
    - Backported 0.6 fix for Oracle alias names not getting
      truncated.  [ticket:1309]
      
- ext
   - The collection proxies produced by associationproxy are now
     pickleable.  A user-defined proxy_factory however